# pico-sensor-hub

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.c
